@@ -2,21 +2,21 @@ package com.RevHire.controller;
 
 import com.RevHire.dto.NotificationDTO;
 import com.RevHire.service.NotificationService;
-
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-
+import org.springframework.http.MediaType;
 import org.springframework.mock.web.MockHttpSession;
 import org.springframework.test.web.servlet.MockMvc;
 
+import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.mockito.Mockito.*;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(NotificationController.class)
@@ -28,62 +28,64 @@ class NotificationControllerTest {
     @MockBean
     private NotificationService notificationService;
 
-    // ================= SHOW PAGE =================
+    private MockHttpSession session;
+    private NotificationDTO mockNotification;
+
+    @BeforeEach
+    void setUp() {
+        session = new MockHttpSession();
+
+        mockNotification = new NotificationDTO();
+        mockNotification.setNotificationId(1L);
+        mockNotification.setMessage("Your application was viewed");
+        mockNotification.setIsRead(false);
+    }
+
+    // ========================= HTML View Tests =========================
 
     @Test
-    void testShowNotificationsPage() throws Exception {
-
-        MockHttpSession session = new MockHttpSession();
-        session.setAttribute("userId", 1L);
+    void showNotificationsPage_ShouldReturnView_WhenLoggedIn() throws Exception {
+        // Specifically setting "userId" in session as per controller logic
+        session.setAttribute("userId", 123L);
 
         mockMvc.perform(get("/notifications/notification").session(session))
                 .andExpect(status().isOk())
                 .andExpect(view().name("notifications"));
     }
 
-    // ================= GET NOTIFICATIONS =================
+    @Test
+    void showNotificationsPage_ShouldRedirect_WhenNotLoggedIn() throws Exception {
+        mockMvc.perform(get("/notifications/notification")) // Empty session
+                .andExpect(status().is3xxRedirection())
+                .andExpect(redirectedUrl("/auth/login"));
+    }
+
+    // ========================= JSON / API Tests =========================
 
     @Test
-    void testGetNotifications() throws Exception {
-
-        NotificationDTO notification = mock(NotificationDTO.class);
-
-        when(notification.getIsRead()).thenReturn(false);
-
-        when(notificationService.getUserNotifications(1L))
-                .thenReturn(List.of(notification));
+    void getNotifications_ShouldReturnJsonList() throws Exception {
+        List<NotificationDTO> notifications = Arrays.asList(mockNotification);
+        when(notificationService.getUserNotifications(1L)).thenReturn(notifications);
 
         mockMvc.perform(get("/notifications/api/1"))
-                .andExpect(status().isOk());
-    }
-
-    // ================= UNREAD COUNT =================
-
-    @Test
-    void testUnreadCount() throws Exception {
-
-        NotificationDTO n1 = mock(NotificationDTO.class);
-        NotificationDTO n2 = mock(NotificationDTO.class);
-
-        when(n1.getIsRead()).thenReturn(false);
-        when(n2.getIsRead()).thenReturn(true);
-
-        when(notificationService.getUserNotifications(1L))
-                .thenReturn(List.of(n1, n2));
-
-        mockMvc.perform(get("/notifications/api/unread-count/1"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.count").value(1));
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$[0].message").value("Your application was viewed"))
+                // CHANGE: Use isRead and notificationId to match your DTO's JSON output
+                .andExpect(jsonPath("$[0].isRead").value(false))
+                .andExpect(jsonPath("$[0].notificationId").value(1));
+
+        verify(notificationService, times(1)).getUserNotifications(1L);
     }
 
-    // ================= MARK READ =================
-
     @Test
-    void testMarkRead() throws Exception {
-
+    void markRead_ShouldReturnOkStatus() throws Exception {
+        // Void method in service, so we just verify it's called
         doNothing().when(notificationService).markAsRead(1L);
 
         mockMvc.perform(put("/notifications/api/1/read"))
                 .andExpect(status().isOk());
+
+        verify(notificationService, times(1)).markAsRead(1L);
     }
 }
